# some_samplecxx

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  try.cpp
